[gd_scene load_steps=6 format=3 uid="uid://c0py45xar41vs"]

[ext_resource type="Script" uid="uid://ppvjg68v08o5" path="res://scripts/game_manager.gd" id="1_t82jb"]
[ext_resource type="Script" uid="uid://3b4t6wnvv1gi" path="res://scripts/interaction_manager.gd" id="2_ycolp"]
[ext_resource type="PackedScene" uid="uid://x1mqyy0rtmy" path="res://entities/ui/end_screen.tscn" id="3_ycolp"]
[ext_resource type="AudioStream" uid="uid://bod0peqme7y18" path="res://sound/2021-05-12_-_The_Little_Cafe_-_www.FesliyanStudios.com.mp3" id="4_immf5"]
[ext_resource type="AudioStream" uid="uid://bwn3wn3m0a1qk" path="res://sound/SFX_Ending_AlarmBell.wav" id="4_x38o4"]

[node name="GameManager" type="Node3D"]
script = ExtResource("1_t82jb")

[node name="Timer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="InteractionManager" type="Node3D" parent="."]
script = ExtResource("2_ycolp")

[node name="EndScreen" parent="." instance=ExtResource("3_ycolp")]

[node name="BGM" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_immf5")
volume_db = -25.0
autoplay = true

[node name="EndSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_x38o4")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
